// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`AuthDialog > Snapshots > renders correctly with auth error 1`] = `
"╭──────────────────────────────────────────────────────────────────────────────────────────────────╮
│                                                                                                  │
│ ? 配置 OpenAI 兼容端点                                                                           │
│                                                                                                  │
│   请配置 OpenAI 兼容的 API 端点以继续使用                                                        │
│                                                                                                  │
│   (selected) OpenAI Compatible Endpoint                                                          │
│                                                                                                  │
│   Something went wrong                                                                           │
│                                                                                                  │
│   (Use Enter to select)                                                                          │
│                                                                                                  │
│   Terms of Services and Privacy Notice for Gemini CLI                                            │
│                                                                                                  │
│   https://geminicli.com/docs/resources/tos-privacy/                                              │
│                                                                                                  │
╰──────────────────────────────────────────────────────────────────────────────────────────────────╯
"
`;

exports[`AuthDialog > Snapshots > renders correctly with default props 1`] = `
"╭──────────────────────────────────────────────────────────────────────────────────────────────────╮
│                                                                                                  │
│ ? 配置 OpenAI 兼容端点                                                                           │
│                                                                                                  │
│   请配置 OpenAI 兼容的 API 端点以继续使用                                                        │
│                                                                                                  │
│   (selected) OpenAI Compatible Endpoint                                                          │
│                                                                                                  │
│   (Use Enter to select)                                                                          │
│                                                                                                  │
│   Terms of Services and Privacy Notice for Gemini CLI                                            │
│                                                                                                  │
│   https://geminicli.com/docs/resources/tos-privacy/                                              │
│                                                                                                  │
╰──────────────────────────────────────────────────────────────────────────────────────────────────╯
"
`;
